package edu.miu.model;

import java.util.List;

/**
 * @author Rimon Mostafiz
 */
// File Name: title.akas.tsv
public class AlsoKnownAs {
    private String titleId;
    private Integer ordering;
    private String title;
    private String region;
    private String language;
    private List<Types> types;
    private String attributes;
    private boolean isOriginalTitle;
}
