package edu.miu.model;

import java.util.List;

/**
 * @author Rimon Mostafiz
 */
// File Name: title.crew.tsv
public class Crew {
    private String tconst;
    private List<Person> directors;
    private List<Person> writers;
}
