package edu.miu.model;

/**
 * @author Rimon Mostafiz
 */
public enum Genre {

    Action("Action"),
    Adult("Adult"),
    Adventure("Adventure"),
    Animation("Animation"),
    Biography("Biography"),
    Comedy("Comedy"),
    Crime("Crime"),
    Documentary("Documentary"),
    Drama("Drama"),
    Family("Family"),
    Fantasy("Fantasy"),
    FilmNoir("Film Noir"),
    GameShow("Game Show"),
    History("History"),
    Horror("Horror"),
    Musical("Musical"),
    Music("Music"),
    Mystery("Mystery"),
    News("News"),
    RealityTV("Reality-TV"),
    Romance("Romance"),
    SciFi("Sci-Fi"),
    SHORT("Short"),
    Sport("Sport"),
    TalkShow("Talk-Show"),
    Thriller("Thriller"),
    War("War"),
    Western("Western");

    private String value;

    Genre(String s) { }
}
