package edu.miu.model;

/**
 * @author Rimon Mostafiz
 */
public enum Profession {
    actor,
    actress,
    assistant_director,
    camera_department,
    composer,
    director,
    miscellaneous,
    music_department,
    make_up_department,
    producer,
    soundtrack,
    writer;
}
