package edu.miu.model;

/**
 * @author Rimon Mostafiz
 */
public enum TitleType {
    MOVIE, SHORT, TVSERIES, TVEPISODE, VIDEO;
}
