package edu.miu.model;

/**
 * @author Rimon Mostafiz
 */
public enum Types {
    alternative, dvd, festival, tv, video, working, original, imdbDisplay;
}
